Remove MkDocs negative margin hack to fix overlapped/unclickable links on main page.

--- a/template/css/base.css
+++ b/template/css/base.css
@@ -2,12 +2,12 @@ body {
     padding-top: 70px;
 }
 
-h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
+/*h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
     content: "";
     display: block;
     margin-top: -65px;
     height: 75px;
-}
+}*/
 
 ul.nav li.main {
     font-weight: bold;
